--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 * {
-	/*border:1px solid green;*/
+	margin:0;
+	padding:0;
 }
 
 body {
-	background-image: xxxxxx;/* foto del parque */
+	color:green;
 }
 
 #container {
@@ -24,32 +25,22 @@ h1 {
 	color:white;
 }
 
-.quote {
-	height:200px;
-}
-
 h2 {
-	color:green;
+	margin-bottom:15px;
 }
 
-#gallery {
-
+#quote, .info, #gallery, footer {
+	margin:50px 0;
 }
 
-.info {
-	
-	color:green;
+.info {	
 	font-size:28px;
 }
 
 footer{
 	width: 100%;
 	position: relative;
-	padding-left: 50px;
 }
-/*iframe{
-	position: relative;
-}*/
 
 .icons{
 	position: absolute;
@@ -60,7 +51,6 @@ footer{
 
 .fa{
 	margin-left: 15px;
-	margin-right: 15px;
-	
+	margin-right: 15px;	
 }
 
