--- a/css/styles.css
+++ b/css/styles.css
@@ -69,4 +69,16 @@ footer{
 		top: 150%;
 		left: 0;
 	}
+
+	#header {
+		height:150px;
+	}
+
+	h1 {
+		font-size:32px;
+	}
+
+	.info {
+		font-size:20px;
+	}
 }
