--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@ body {
 #header {
 	margin:50px 0;
 	padding:100px 0;
-	height:400px;
-	background-image: url('../img/1.jpg');
+	height:300px;
+	background-image: url('../img/fuente-banner.gif');
 	text-align: center;
 }
 
